--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,10 @@ spring:
       host: localhost
       port: 27017
       database: testdb
+  mvc:
+    view:
+      suffix: .html
+      prefix: /**
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml
   config-location: classpath:mybatis/mybatis-config.xml
